--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -33,10 +33,15 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a
+              class="nav-link"
+              href="#"
+              type="button"
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#loginModal"
+              >Login</a
+            >
           </li>
         </ul>
       </div>
@@ -52,28 +57,156 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>About Us</h2>
+          <h2>About Ookis</h2>
           <p>
-            Hello there, shh - you may distrupt someone's focus. Here we are to
-            store our books
+            Hello there traveler, shh - you may distrupt someone's focus. Here
+            we are to store our books
           </p>
         </div>
         <div class="col-md-6">
-          <h2>Our Services</h2>
+          <h2>With Ookis you can:</h2>
           <ul>
-            <li>Service 1</li>
-            <li>Service 2</li>
-            <li>Service 3</li>
-            <li>Service 4</li>
+            <li>Save books you read</li>
+            <li>Rate them</li>
+            <li>Write notes about them</li>
+            <li>Browse your list of books</li>
           </ul>
         </div>
       </div>
     </div>
 
     <footer class="bg-dark text-white text-center py-3">
-      <p>&copy; 2023 Fancy Page. All rights reserved.</p>
+      <p>&copy; 2023 Ookis. All rights reserved.</p>
     </footer>
-
+    <!-- Login Modal -->
+    <div
+      class="modal fade"
+      id="loginModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="loginModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">Login</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="login-container">
+              <form>
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="username"
+                    placeholder="Enter your username"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    placeholder="Enter your password"
+                  />
+                </div>
+                <button type="submit" class="btn btn-secondary btn-block">
+                  Login
+                </button>
+              </form>
+              <p class="text-center mt-3">
+                Don't have an account yet?
+                <a
+                  href="#registerModal"
+                  data-toggle="modal"
+                  data-dismiss="modal"
+                  >Register</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Register Modal -->
+    <div
+      class="modal fade"
+      id="registerModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="registerModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="registerModalLabel">Register</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="username">Username</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="username"
+                  placeholder="Enter your username"
+                />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Enter your email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  placeholder="Enter your password"
+                />
+              </div>
+              <div class="form-group">
+                <label for="confirmPassword">Confirm Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="confirmPassword"
+                  placeholder="Confirm your password"
+                />
+              </div>
+              <button type="submit" class="btn btn-secondary btn-block">
+                Register
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
