--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -121,10 +121,12 @@
                     placeholder="Enter your password"
                   />
                 </div>
-                <button type="submit" class="btn btn-secondary btn-block">
-                  Login
-                </button>
               </form>
+              <a href="userPage.html">
+                <!-- Zniesiono type="submit" because I wont add login at the end-->
+                <button class="btn btn-secondary btn-block">Login</button>
+              </a>
+
               <p class="text-center mt-3">
                 Don't have an account yet?
                 <a
